tests/jsonnet/pass/self_as_object.jsonnet
{ x: 1, y: self }.y.y.x
