tests/jsonnet/errors/super_no_super_class_runtime.jsonnet
{ x:1, y: self.x, z: super.x }
